# ada

./: .gitignore  CLAUDE.md  COMPONENT_ANALYSIS.md  design_doc.md  package.json  vite.config.ts
backend/: .env.sample  README.md  STREAMING_INTEGRATION_GUIDE.md  bot.py  chat_history.db-shm  enhanced_mcp_client.py  graph.py  logs.out  main.py  main_new.py  mcp_servers.json  pyproject.toml  quick_start.py  schemas.py  setup_env.py  streaming_parser.py  test_streaming.py  tools.py
backend/agent/: enhanced_mcp_client_agent.py  orchestrator.py  planner.py  voice_based_interaction_agent.py
backend/app/: chat_history_manager.py  config.py  connection_manager.py  connection_mapper.py  connection_processor.py  models.py  per_connection_processor.py  queues.py  server.py  session_manager.py  vis_processor.py  viz_provider_factory.py  voice_broadcast_manager.py  voice_manager.py  webrtc.py
backend/docs/: MAX_TOOL_CALLS_FEATURE.md
backend/examples/: simple_http_mcp_server.py
backend/mcp_servers/: utilities_server.py  weather_mcp_clent.py  weather_server.py
backend/prompts/: PROMPT_CHANGES_SUMMARY.md  README.md  analyzer.txt  evaluator.txt  google_ai_system.txt  mcp.txt  mcp_agent_prompt.txt  openai_html_generator_system.txt  openai_shadcn_generator_system.txt  openai_tailwind_generator_system.txt  orchestrator_prompt.txt  orchestrator_react_prompt.txt  planner.txt  planner_prompt.txt  system_base.txt  thesys_agent_assistant.txt  thesys_agent_system.txt  thesys_visualize_system.txt  tomorrow_ai_system.txt  visualization_system_prompt.txt  voice_agent_system.txt  voice_enhancement_mcp_prompt.txt  voice_enhancement_prompt.txt
backend/src/: __init__.py  graph.py
backend/state/: __init__.py  agent_state.py  schema.py
(+130 files in other folders)
